<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translate="false">FileSpace</string>
    <string name="app_name_uppercase" translate="false">FILESPACE</string>
    <string name="app_name_full" translate="false">Control your files</string>
    <string name="author_full_name" translate="false">Jonathan Mercandalli</string>
    <string name="author_full_name_by" translate="false">By Jonathan Mercandalli</string>
    <string name="app_description" translate="false">Share, store, control your IT!</string>
    <string name="api_map_key" translate="false">AIzaSyDQnix0ebkhokWcBkXZNNcWVu-kQcSG_8g</string>
    <string name="cast_id" translate="false">7E662879</string>

    <string name="navigation_drawer_open" translate="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translate="false">Close navigation drawer</string>

    <string name="image_description">Description Image</string>

    <string name="author">Author</string>
    <string name="about">About</string>
    <string name="tutorial">Tutorial</string>
    <string name="action_failed">Action failed</string>
    <string name="no_user">No User</string>
    <string name="no_person">No Person</string>
    <string name="no_talk">No Talk</string>
    <string name="no_music">No Music</string>
    <string name="no_image">No Image</string>
    <string name="no_file">No File</string>
    <string name="no_file_server">No File on server.</string>
    <string name="no_file_directory">No File on this directory.</string>
    <string name="no_file_local">No File on local FileSpace folder.</string>
    <string name="no_file_local_folder">No File on local /%1$s folder.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="not_implemented">Not implemented.</string>
    <string name="no_logged">You are not logged.</string>
    <string name="file">File</string>
    <string name="request">Request</string>
    <string name="signin">Sign in</string>
    <string name="login">Log in</string>
    <string name="up">Up</string>
    <string name="console">Console</string>
    <string name="server_error">No server response.</string>
    <string name="method">Method</string>
    <string name="auto_connection">log me on automatically</string>
    <string name="ok">OK</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="waiting_for_response">Waiting for response</string>
    <string name="refresh">Refresh</string>
    <string name="back">Back</string>

    <string name="action">Action</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="open_as">Open as…</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="meta_data_edition">Edit metadata</string>
    <string name="properties">Properties</string>
    <string name="data">Data</string>
    <string name="talk">Talk</string>
    <string name="sort">Sort</string>
    <string name="view">View</string>

    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="other">Other</string>

    <string name="dialog_server_route">Server Route</string>
    <string name="dialog_server_url">Server URL</string>
    <string name="dialog_username">Username</string>
    <string name="dialog_password">Password</string>
    <string name="dialog_register">Register</string>
    <string name="dialog_login">Log in</string>
    <string name="dialog_json">Json</string>

    <string name="dialog_file_create">Create</string>
    <string name="dialog_file_create_folder">Create Folder</string>
    <string name="dialog_file_create_txt">Create TXT File</string>
    <string name="dialog_file_name_interrogation">Name ?</string>

    <string name="menu_action_cast">Cast</string>
    <string name="menu_action_search">Search</string>
    <string name="menu_action_share">Share</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_add">Add</string>
    <string name="menu_action_home">Home</string>
    <string name="menu_action_upload">Upload</string>
    <string name="menu_action_download">Download</string>

    <string name="activity_main_toast_update_needed">Sorry, update is needed</string>

    <string name="file_fragment_public_cloud">CLOUD</string>
    <string name="file_fragment_my_cloud">MY CLOUD</string>
    <string name="file_fragment_local">LOCAL</string>
    <string name="file_fragment_music">MUSIC</string>

    <string name="failed_google_plus">Google+ connection failed.</string>

    <string name="genealogy_first_name_1">First name 1</string>
    <string name="genealogy_first_name_2">First name 2</string>
    <string name="genealogy_first_name_3">First name 3</string>
    <string name="genealogy_last_name">Last name</string>
    <string name="genealogy_add_person">Add person</string>

    <string name="activity_search_empty">No result.</string>

    <!-- NEW tags -->

    <!-- NavDrawer -->
    <string name="tab_files">Files</string>
    <string name="tab_sdcard">SdCard</string>
    <string name="tab_musics">Musics</string>
    <string name="tab_photos">Photos</string>
    <string name="tab_videos">Videos</string>
    <string name="tab_cloud">Cloud</string>
    <string name="tab_notes">Notes</string>
    <string name="tab_community">Community</string>
    <string name="tab_robotics">Robotics</string>
    <string name="tab_genealogy">Genealogy</string>
    <string name="tab_admin">Admin</string>
    <string name="tab_request">Request</string>
    <string name="tab_other">Other</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_loyalty">Make the developer happy</string>
    <string name="tab_log_out">Log out</string>
    <string name="tab_support">Support</string>
    <!-- NavDrawer Header -->
    <string name="tab_header_title">%1$d%% Full</string>
    <string name="tab_header_subtitle">Using %1$s of %2$s</string>

    <!-- File -->
    <!-- FileModel Adapter -->
    <string name="file_model_adapter_directory">Directory</string>
    <string name="file_model_adapter_file">file</string>
    <string name="file_model_adapter_files">files</string>
    <!-- FileAudio Local Fragment -->
    <string name="file_audio_model_directory">Directory</string>
    <string name="file_audio_model_music">Music</string>
    <string name="file_audio_model_musics">Musics</string>
    <!-- FileAudio Local HEADER -->
    <string name="file_audio_model_header_folder">FOLDER</string>
    <string name="file_audio_model_header_all">ALL</string>
    <!-- FileImage Local Fragment -->
    <string name="file_image_model_directory">Directory</string>
    <string name="file_image_model_image">image</string>
    <string name="file_image_model_images">images</string>
    <!-- FileAudioModel Adapter -->
    <string name="file_audio_model_adapter_directory">Directory</string>
    <string name="file_audio_model_adapter_file">file</string>
    <string name="file_audio_model_adapter_files">files</string>
    <!-- FileModel Type -->
    <string name="file_model_type_unknown"> </string>
    <string name="file_model_type_apk">Android application</string>
    <string name="file_model_type_text">Text</string>
    <string name="file_model_type_html">Html</string>
    <string name="file_model_type_picture">Picture</string>
    <string name="file_model_type_audio">Audio</string>
    <string name="file_model_type_video">Video</string>
    <string name="file_model_type_archive">Archive</string>
    <string name="file_model_type_file_space">FileSpace</string>
    <string name="file_model_type_word">Word</string>
    <string name="file_model_type_open_document">OpenDocument</string>
    <string name="file_model_type_power_point">Power Point</string>
    <string name="file_model_type_excel">Excel</string>
    <string name="file_model_type_vcf">Business card</string>
    <string name="file_model_type_pdf">Pdf</string>
    <string name="file_model_type_source">Source code</string>
    <string name="file_model_type_source_java">Java source code</string>
    <string name="file_model_type_nomedia">Android file to hide</string>
    <string name="file_model_type_3d">3d buildModel</string>
    <string name="file_model_type_iso">Optical disc</string>
    <string name="file_model_type_tmp">Temporary</string>
    <string name="file_model_type_index">Index</string>
    <string name="file_model_type_keystore">KeyStore</string>
    <string name="file_model_type_trace">Debugging Trace</string>
    <string name="file_model_type_directory">Directory</string>
    <!-- FileModel Local New File -->
    <string name="file_model_local_new_title">Action</string>
    <string name="file_model_local_new_folder_file">New Folder or File</string>
    <string name="file_model_local_new_folder_file_description">Choose a file name with ext or a folder name.</string>

    <!-- Sort -->
    <string name="sort_abc">Sort by name (A-Z)</string>
    <string name="sort_size">Sort by size</string>
    <string name="sort_date">Sort by date</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_about">About</string>
    <string name="settings_licences">Licences</string>
    <string name="settings_ad">Make the developer happy</string>
    <string name="settings_ad_is_loading">Is loading…</string>
    <string name="settings_ad_thank_you_1">Thank you. You make the developer happy =)</string>
    <string name="settings_ad_thank_you_2">Thank you. You make the developer very happy =)</string>
    <string name="settings_ad_thank_you_3">Thank you. You make the developer very very happy =)</string>
    <string name="settings_ad_thank_you_4">Thank you. You make the developer very very very happy =)</string>

    <!-- Support -->
    <string name="support_edit_text_hint">How can I help you?\nDescribe the new feature you want,\nbug you have, questions etc.\nThe dev.</string>

    <!-- Search -->
    <string name="search_title_hint">Search</string>

</resources>
