<?xml version="1.0" encoding="utf-8"?>
<!--
	Personal Project : Control server
		MERCANDALLI Jonathan
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp" >

    <EditText
        android:id="@+id/et_first_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/genealogy_first_name_1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/et_first_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_first_name_1"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/genealogy_first_name_2"
        android:padding="10dp" >
    </EditText>

    <EditText
        android:id="@+id/et_first_name_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_first_name_2"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/genealogy_first_name_3"
        android:padding="10dp" >
    </EditText>

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_first_name_3"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/genealogy_last_name"
        android:padding="10dp" >
    </EditText>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:text="@string/add"
        android:layout_below="@+id/et_last_name"/>



</RelativeLayout>