<?xml version="1.0" encoding="utf-8"?>
<!--
	Personal Project : Control server
		MERCANDALLI Jonathan
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:background="@color/notifications_bar"
    android:elevation="8dp">

    <mercandalli.com.jarvis.ui.view.CircularImageView
        android:id="@+id/icon"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_user" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/icon"
        android:layout_toRightOf="@+id/icon"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:textColor="#fff"
        android:textSize="20sp"
        
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="marquee"
		android:marqueeRepeatLimit="marquee_forever"
		android:focusable="false"
		android:scrollHorizontally="true"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        android:textColor="#fff"
        android:textSize="15sp"
        
        android:maxLines="1"
        android:singleLine="true"
        android:ellipsize="marquee"
		android:marqueeRepeatLimit="marquee_forever"
		android:focusable="false"
		android:scrollHorizontally="true"
        android:layout_alignBottom="@+id/icon"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/icon"
        android:text="@string/app_name_full"
        android:layout_marginBottom="4dp" />

</RelativeLayout>