<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_below="@+id/rl_top"
    android:orientation="vertical"
    android:padding="20dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp">

        <EditText
            android:id="@+id/fragment_registration_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dialog_username"
            android:lines="1"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="22sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/username_layout"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/fragment_registration_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dialog_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="22sp"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/autoconnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_layout"
        android:layout_marginTop="24dp"
        android:text="@string/auto_connection"
        android:textColor="@color/hint_foreground_material_light"
        android:textSize="20sp"/>

</RelativeLayout>