<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.mercandalli.android.apps.files.main.NavDrawerHeaderView
            android:id="@+id/view_nav_drawer_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/status_bar" />

        <FrameLayout
            android:id="@+id/view_nav_drawer_files"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_files_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/q_ic_drawer_home" />

            <TextView
                android:id="@+id/view_nav_drawer_files_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:gravity="center_vertical"
                android:text="@string/tab_files"
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_cloud"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_cloud_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/q_ic_drawer_files" />

            <TextView
                android:id="@+id/view_nav_drawer_cloud_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:gravity="center_vertical"
                android:text="@string/tab_cloud"
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_workspace"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_note_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/q_ic_drawer_workspace" />

            <TextView
                android:id="@+id/view_nav_drawer_note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:gravity="center_vertical"
                android:text="@string/tab_notes"
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_community"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_community_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/q_ic_drawer_community" />

            <TextView
                android:id="@+id/view_nav_drawer_community_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:gravity="center_vertical"
                android:text="@string/tab_community"
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_robotics"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_robotics_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/q_ic_drawer_robotics" />

            <TextView
                android:id="@+id/view_nav_drawer_robotics_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:gravity="center_vertical"
                android:text="@string/tab_robotics"
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_genealogy"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_genealogy_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/q_ic_drawer_robotics" />

            <TextView
                android:id="@+id/view_nav_drawer_genealogy_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:gravity="center_vertical"
                android:text="@string/tab_genealogy"
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_admin"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/view_nav_drawer_admin_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/q_ic_drawer_data" />

            <TextView
                android:id="@+id/view_nav_drawer_admin_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:gravity="center_vertical"
                android:text="@string/tab_admin"
                android:textColor="#000"
                android:textSize="@dimen/view_nav_drawer_text_section" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ccc" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="42dp">

            <TextView
                android:id="@+id/view_nav_drawer_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="14dp"
                android:gravity="center_vertical"
                android:paddingTop="5dp"
                android:text="@string/tab_other"
                android:textColor="#545454"
                android:textSize="14sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_settings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/view_nav_drawer_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:text="@string/tab_settings"
                android:textColor="#444"
                android:textSize="@dimen/view_nav_drawer_text_section_other" />

            <ImageView
                android:id="@+id/view_nav_drawer_settings_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_settings_grey" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_loyalty"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/view_nav_drawer_loyalty_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:text="@string/tab_loyalty"
                android:textColor="#444"
                android:textSize="@dimen/view_nav_drawer_text_section_other" />

            <ImageView
                android:id="@+id/view_nav_drawer_loyalty_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_loyalty" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_logout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/view_nav_drawer_logout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:text="@string/tab_log_out"
                android:textColor="#444"
                android:textSize="@dimen/view_nav_drawer_text_section_other" />

            <ImageView
                android:id="@+id/view_nav_drawer_logout_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_log_out" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/view_nav_drawer_support"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/view_nav_drawer_support_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="47dp"
                android:layout_marginLeft="78dp"
                android:layout_marginRight="47dp"
                android:layout_marginStart="78dp"
                android:text="@string/tab_support"
                android:textColor="#444"
                android:textSize="@dimen/view_nav_drawer_text_section_other" />

            <ImageView
                android:id="@+id/view_nav_drawer_support_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/ic_help_grey" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>